TestSuite/errors/err0163.pas
type TClass = class
procedure Test;
begin
  inherited;
end;
end;
  
begin

end.